[gd_scene load_steps=4 format=3 uid="uid://ctyeuvwh0s02v"]

[ext_resource type="Script" uid="uid://bu8032t1fcm7o" path="res://addons/diisis/editor/src/change_text_id_container.gd" id="1_doaff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doaff"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pp63c"]

[node name="ChangeTextIDContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_doaff")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Changing ID: "

[node name="IDLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "ID HERE"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "TYPE HERE"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "@"

[node name="AddressLabel" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxEmpty_doaff")
theme_override_styles/normal = SubResource("StyleBoxEmpty_pp63c")
bbcode_enabled = true
text = "ADR HERE"
fit_content = true
vertical_alignment = 1

[node name="NewIDLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "New ID"

[node name="AlreadyExistsLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.972216, 0.590869, 0.518663, 1)
bbcode_enabled = true
text = "ID \"\" already exists at Address GOTO"
fit_content = true

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Content:"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ContentLabel" type="RichTextLabel" parent="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "content
preview"
fit_content = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
focus_mode = 0
text = "Save"

[node name="DiscardButton" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
focus_mode = 0
text = "Discard"

[connection signal="meta_clicked" from="VBoxContainer/HBoxContainer2/AddressLabel" to="." method="goto"]
[connection signal="text_changed" from="VBoxContainer/NewIDLineEdit" to="." method="_on_new_id_line_edit_text_changed"]
[connection signal="meta_clicked" from="VBoxContainer/AlreadyExistsLabel" to="." method="goto"]
[connection signal="item_rect_changed" from="VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ContentLabel" to="." method="_on_content_label_item_rect_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/DiscardButton" to="." method="_on_discard_button_pressed"]
